Stabilize settlement: fix rounding in summary and balance-based payments